# mcp-openclaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PLATFORMS.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.json
.github/workflows/: ci.yml
docs/: access.md  awesome-openclaw-pr.md  clawhub-firm-orchestration.md  demo-gif-storyboard.md  launch-week1.md  openclaw-deploy.md  product-suite.md  runbook.md  security.md
docs/releases/: v0.1.0.md
scripts/: smoke_test.py  start.sh  status.sh  stop.sh
src/: __init__.py  a2a_bridge.py  acp_bridge.py  advanced_security.py  agent_orchestration.py  audit.py  auth_compliance.py  browser_audit.py  compliance_medium.py  config.py  config_helpers.py  config_migration.py  cost_guard.py  dashboard_ops.py  delivery_export.py  ecosystem_audit.py  firm_repo.py  gateway_fleet.py  gateway_hardening.py  health.py  hebbian_memory.py  i18n_audit.py  legal_status.py  location_strategy.py  main.py  market_research.py  memory_adapter.py  memory_audit.py  memory_bridge_client.py  memory_bridge_server.py  memory_os_ai_store.py  memory_sqlite.py  model_router.py  models.py  n8n_bridge.py  observability.py  openclaw_dispatcher.py  openclaw_ws_client.py  platform_audit.py  platform_compat.py  (+16 more)
src/hebbian_memory/: __init__.py  _analysis.py  _helpers.py  _runtime.py  _validation.py
tests/: conftest.py  test_a2a_bridge.py  test_acp_bridge.py  test_advanced_security.py  test_agent_orchestration.py  test_auth_compliance.py  test_browser_audit.py  test_compliance_medium.py  test_config_helpers.py  test_config_migration.py  test_cov_100a.py  test_cov_100b.py  test_cov_100c.py  test_cov_100d.py  test_cov_100e.py  test_cov_100f.py  test_cov_100g.py  test_cov_100h.py  test_cov_100i.py  test_cov_acp_fleet_vs.py  test_cov_deep.py  test_cov_extreme.py  test_cov_final.py  test_cov_hebbian.py  test_cov_low.py  test_cov_main.py  test_cov_mid.py  test_cov_ultra.py  test_delivery_export.py  test_ecosystem_audit.py  test_gateway_fleet.py  test_gateway_hardening.py  test_handlers.py  test_hebbian_memory.py  test_i18n_audit.py  test_legal_status.py  test_location_strategy.py  test_market_research.py  test_memory_audit.py  test_models.py  (+13 more)
