[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-openclaw-extensions"
version = "3.0.0"
description = "Python MCP server (port 8012) bridging VS Code Copilot agents to the OpenClaw Gateway ecosystem — 115 tools across 25 modules"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Romain Santoli", email = "romainsantoli@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
    "Intended Audience :: Developers",
]
dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/romainsantoli-web/setup-vs-agent-firm/tree/main/mcp-openclaw-extensions"
Repository = "https://github.com/romainsantoli-web/setup-vs-agent-firm"
Issues = "https://github.com/romainsantoli-web/setup-vs-agent-firm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow-running",
]
addopts = "--cov=src --cov-report=term-missing -m 'not integration'"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 94
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
