[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-openclaw-extensions"
version = "4.1.0"
description = "138-tool generic MCP server for AI agent firms. Works with Claude Code, Codex, VS Code, Cursor, Antigravity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Romain Santoli", email = "romainsantoli@gmail.com"},
]
keywords = [
    "mcp", "mcp-server", "ai-agents", "firm", "a2a-protocol",
    "hebbian-memory", "inter-session-memory", "security-audit",
    "copilot", "claude-code", "codex", "cursor", "windsurf",
    "antigravity", "generic-mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Framework :: aiohttp",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-aiohttp>=1.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]
analysis = [
    "hdbscan>=0.8.33",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
]
metrics = [
    "prometheus-client>=0.20.0",
]

[project.scripts]
mcp-firm = "src.main:main"
mcp-openclaw = "src.main:main"  # backward compat alias

[project.urls]
Homepage = "https://github.com/romainsantoli-web/firm-ecosystem"
Documentation = "https://github.com/romainsantoli-web/firm-ecosystem/blob/main/API-REFERENCE.md"
Repository = "https://github.com/romainsantoli-web/mcp-openclaw"
Issues = "https://github.com/romainsantoli-web/mcp-openclaw/issues"
Changelog = "https://github.com/romainsantoli-web/mcp-openclaw/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow-running",
]
addopts = "--cov=src --cov-report=term-missing -m 'not integration'"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 94
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
